--- a/web/package.json
+++ b/web/package.json
@@ -12,8 +12,11 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@iconify-json/ic": "^1.1.13",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/compiler-sfc": "^3.2.47",
     "typescript": "^4.9.3",
+    "unplugin-icons": "^0.15.3",
     "vite": "^4.2.0",
     "vue-tsc": "^1.2.0"
   }
