--- a/web/package.json
+++ b/web/package.json
@@ -9,14 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@iconify-json/ic": "^1.1.13",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vue/compiler-sfc": "^3.2.47",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "sass": "^1.59.3",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
     "unplugin-icons": "^0.15.3",
+    "url": "^0.11.0",
     "vite": "^4.2.0",
     "vue-tsc": "^1.2.0"
   }
