--- a/express/package.json
+++ b/express/package.json
@@ -14,11 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.6",
     "@types/node": "^18.15.3",
+    "@types/session-file-store": "^1.2.2",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.21",
     "typescript": "^5.0.2"
