--- a/web/package.json
+++ b/web/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.33",
+    "validator": "^13.9.0",
     "vue": "^3.2.47",
-    "vue-hooks-form": "^0.3.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@iconify-json/ic": "^1.1.13",
+    "@types/lodash": "^4.14.191",
+    "@types/validator": "^13.7.14",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vue/compiler-sfc": "^3.2.47",
     "autoprefixer": "^10.4.14",
