--- a/express/package.json
+++ b/express/package.json
@@ -13,16 +13,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "session-file-store": "^1.5.0"
+    "mongoose": "^7.0.2",
+    "session-file-store": "^1.5.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.6",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.15.3",
     "@types/session-file-store": "^1.2.2",
+    "@types/validator": "^13.7.14",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.21",
     "typescript": "^5.0.2"
